# NFJ-LLM-JobFinder

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/nofluffjobs_llm_matcher/: config.py  logging_setup.py  main.py
src/nofluffjobs_llm_matcher/scraper/: __init__.py  browser.py  links.py  pagination.py
src/nofluffjobs_llm_matcher/storage/: __init__.py  writer.py
